# cluster-manager

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .yamllint  Dockerfile  Makefile  README.md  devel.env  requirements.txt  upstream.txt  version.txt
.github/workflows/: ansible-lint.yml
app/: ansible.cfg  bootstrap.yml  config.py  create_all.yml  create_cluster.yml  create_installrepos.yml  create_loadbalancer.yml  create_machines.yml  create_network.yml  create_router.yml  deploy.sh  inventory.py  shutdown.yml  startup.yml  util_vm_facts.yml  versions.ini
app/cli/: .command  apply  config  create  deploy  force-poweroff  force-shutdown  login  oc  shutdown  ssh  startup  version  wait-for
app/collections/: requirements.yml
app/cookbook.deploy/: hosted-loadbalancer.yml
app/deploy.d/container-storage/: container-storage.yml  gather-facts.yml  local-storage.yml
app/deploy.d/hosted-loadbalancer/: main.sh
app/deploy.d/odh-demo/: main.sh  odh-demo.yml
app/lib/: conftui.py
app/lib/python/: conftui.py
app/playbooks/: shutdown.yml  startup.yml  util_vm_facts.yml
app/playbooks/firmware.d/: main.sh
app/playbooks/identify.d/: main.sh  uid_off.yml  uid_on.yml
app/providers/: dhcp  dhcp-nextserver  dns  management
app/roles/dhcp/tasks/: main.yml  (+1 more)
data.skel/: config.sh  config.yml
docs/: ilo.md  kvm.md  openwrt.md  prereqs.md
home/: .bashrc
home/.ssh/: config
pre/: README.md
pre/faros_config/: README.md  example_config.yml  setup.cfg  test_config.py
pre/faros_config/faros_config/: __init__.py  bastion.py  cluster.py  network.py  proxy.py
(+173 files in other folders)
