[metadata]
name = faros-config
version = file: VERSION.txt
description = A configuration handler for Project Faros
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPL v3

[options]
packages = find:
install_requires =
    PyYAML==5.3.1
    pydantic==1.7.3
